--- a/docs-web/src/main/webapp/src/index.html
+++ b/docs-web/src/main/webapp/src/index.html
@@ -61,6 +61,7 @@
     <script src="app/docs/controller/ModalFeedback.js" type="text/javascript"></script>
     <script src="app/docs/controller/ModalImport.js" type="text/javascript"></script>
     <script src="app/docs/controller/PasswordReset.js" type="text/javascript"></script>
+    <script src="app/docs/controller/Register.js" type="text/javascript"></script>
     <script src="app/docs/controller/Navigation.js" type="text/javascript"></script>
     <script src="app/docs/controller/Footer.js" type="text/javascript"></script>
     <script src="app/docs/controller/document/Document.js" type="text/javascript"></script>
@@ -99,6 +100,7 @@
     <script src="app/docs/controller/settings/SettingsMetadata.js" type="text/javascript"></script>
     <script src="app/docs/controller/settings/SettingsLdap.js" type="text/javascript"></script>
     <script src="app/docs/controller/settings/SettingsUserActivity.js" type="text/javascript"></script>
+    <script src="app/docs/controller/settings/SettingsUserRegistration.js" type="text/javascript"></script>
     <script src="app/docs/controller/usergroup/UserGroup.js" type="text/javascript"></script>
     <script src="app/docs/controller/usergroup/UserProfile.js" type="text/javascript"></script>
     <script src="app/docs/controller/usergroup/GroupProfile.js" type="text/javascript"></script>
